force-app/main/default/objects/Icon__c/Icon__c.object-meta.xml
<CustomObject>
    <label>Icon</label>
    <nameField>
        <label>Icon Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Icons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>