force-app/main/default/objects/Icon__c/fields/DefaultColor__c.field-meta.xml
<CustomField>
    <fullName>DefaultColor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Color of the the Pixels when the Icon is first created.</description>
    <inlineHelpText>The Color of the the Pixels when the Icon is first created.</inlineHelpText>
    <label>Default Color</label>
    <referenceTo>Color__c</referenceTo>
    <relationshipLabel>Default Color Icons</relationshipLabel>
    <relationshipName>DefaultColorIcons</relationshipName>
    <type>Lookup</type>
</CustomField>